# AFINs

./: .gitignore  README.md  main.py  pyproject.toml
benchmarks/: __init__.py  compare_tabpfn_openml.py
demo/: 00_one_shot_afin.ipynb  01_afin_as_proposal.ipynb  02_extending_afin.ipynb  03_real_world_logistic.ipynb  04_standard_prior_openml.ipynb  README.md  figure_style.py  make_one_shot_figure.py  make_openml_comparison_figure.py  make_sampler_gif.py
demo/assets/: openml_standard_prior_benchmark.csv
src/afin/: __init__.py  api.py  cli.py  demo.py  eval.py  examples.py  inference.py  model.py  nuts.py  plotting.py  proposals.py  spec.py  tasks.py  train.py
